PortalPackage/ Enrollment Rx Core/objects/Program_Offered__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>Campus_Offering_this_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Campus Offering this Program</label>
        <referenceTo>Campus__c</referenceTo>
        <relationshipLabel>Programs Offered at this Campus</relationshipLabel>
        <relationshipName>R00N80000002juUUEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Program Catalog</label>
        <referenceTo>Program_Catalog__c</referenceTo>
        <relationshipLabel>Campuses Offering this Program</relationshipLabel>
        <relationshipName>R00N80000002jvIWEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Offered__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term Offered</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Programs Offered</relationshipLabel>
        <relationshipName>Programs_Offered</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Offered</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Catalog__c</columns>
        <columns>Campus_Offering_this_Program__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Offered Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs Offered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>